simplec/parser/SimpleCParser.py
# Generated from SimpleC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class SimpleCParser ( Parser ):

    grammarFileName = "SimpleC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'else'", "'if'", "'return'", "'while'", 
                     "'{'", "'}'", "'('", "')'", "'<'", "'<='", "'>'", "'>='", 
                     "'+'", "'-'", "'*'", "'/'", "'&'", "'?'", "':'", "';'", 
                     "','", "'='", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "If", "Return", "While", 
                      "LBrace", "RBrace", "LParen", "RParen", "Less", "LessEqual", 
                      "Greater", "GreaterEqual", "Plus", "Minus", "Star", 
                      "Div", "And", "Question", "Colon", "Semi", "Comma", 
                      "Assign", "Equal", "NotEqual", "Identifier", "Constant", 
                      "Whitespace", "Newline" ]

    RULE_program = 0
    RULE_translationUnit = 1
    RULE_externalDeclaration = 2
    RULE_functionDefinition = 3
    RULE_identifierList = 4
    RULE_statementList = 5
    RULE_statement = 6
    RULE_expressionStatement = 7
    RULE_returnStatement = 8
    RULE_compoundStatement = 9
    RULE_ifStatement = 10
    RULE_whileStatement = 11
    RULE_expression = 12
    RULE_primaryExpression = 13
    RULE_postfixExpression = 14
    RULE_callExpression = 15
    RULE_argumentExpressionList = 16
    RULE_unaryExpression = 17
    RULE_multiplicativeExpression = 18
    RULE_additiveExpression = 19
    RULE_relationalExpression = 20
    RULE_equalityExpression = 21
    RULE_assignmentExpression = 22

    ruleNames =  [ "program", "translationUnit", "externalDeclaration", 
                   "functionDefinition", "identifierList", "statementList", 
                   "statement", "expressionStatement", "returnStatement", 
                   "compoundStatement", "ifStatement", "whileStatement", 
                   "expression", "primaryExpression", "postfixExpression", 
                   "callExpression", "argumentExpressionList", "unaryExpression", 
                   "multiplicativeExpression", "additiveExpression", "relationalExpression", 
                   "equalityExpression", "assignmentExpression" ]

    EOF = Token.EOF
    T__0=1
    If=2
    Return=3
    While=4
    LBrace=5
    RBrace=6
    LParen=7
    RParen=8
    Less=9
    LessEqual=10
    Greater=11
    GreaterEqual=12
    Plus=13
    Minus=14
    Star=15
    Div=16
    And=17
    Question=18
    Colon=19
    Semi=20
    Comma=21
    Assign=22
    Equal=23
    NotEqual=24
    Identifier=25
    Constant=26
    Whitespace=27
    Newline=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def translationUnit(self):
            return self.getTypedRuleContext(SimpleCParser.TranslationUnitContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SimpleCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleCParser.Identifier:
                self.state = 46
                self.translationUnit()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TranslationUnitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def externalDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.ExternalDeclarationContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.ExternalDeclarationContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_translationUnit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTranslationUnit" ):
                return visitor.visitTranslationUnit(self)
            else:
                return visitor.visitChildren(self)




    def translationUnit(self):

        localctx = SimpleCParser.TranslationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_translationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 49
                self.externalDeclaration()
                self.state = 52 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SimpleCParser.Identifier):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExternalDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDefinition(self):
            return self.getTypedRuleContext(SimpleCParser.FunctionDefinitionContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_externalDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternalDeclaration" ):
                return visitor.visitExternalDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def externalDeclaration(self):

        localctx = SimpleCParser.ExternalDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_externalDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.functionDefinition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ident = None # Token
            self.params = None # IdentifierListContext
            self.body = None # CompoundStatementContext

        def LParen(self):
            return self.getToken(SimpleCParser.LParen, 0)

        def RParen(self):
            return self.getToken(SimpleCParser.RParen, 0)

        def Identifier(self):
            return self.getToken(SimpleCParser.Identifier, 0)

        def compoundStatement(self):
            return self.getTypedRuleContext(SimpleCParser.CompoundStatementContext,0)


        def identifierList(self):
            return self.getTypedRuleContext(SimpleCParser.IdentifierListContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_functionDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = SimpleCParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            localctx.ident = self.match(SimpleCParser.Identifier)
            self.state = 57
            self.match(SimpleCParser.LParen)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleCParser.Identifier:
                self.state = 58
                localctx.params = self.identifierList()


            self.state = 61
            self.match(SimpleCParser.RParen)
            self.state = 62
            localctx.body = self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdentifierListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCParser.Identifier)
            else:
                return self.getToken(SimpleCParser.Identifier, i)

        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCParser.Comma)
            else:
                return self.getToken(SimpleCParser.Comma, i)

        def getRuleIndex(self):
            return SimpleCParser.RULE_identifierList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):

        localctx = SimpleCParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(SimpleCParser.Identifier)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleCParser.Comma:
                self.state = 65
                self.match(SimpleCParser.Comma)
                self.state = 66
                self.match(SimpleCParser.Identifier)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.StatementContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.StatementContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_statementList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = SimpleCParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleCParser.If) | (1 << SimpleCParser.Return) | (1 << SimpleCParser.While) | (1 << SimpleCParser.LBrace) | (1 << SimpleCParser.LParen) | (1 << SimpleCParser.Plus) | (1 << SimpleCParser.Minus) | (1 << SimpleCParser.Star) | (1 << SimpleCParser.And) | (1 << SimpleCParser.Identifier) | (1 << SimpleCParser.Constant))) != 0):
                self.state = 72
                self.statement()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionStatement(self):
            return self.getTypedRuleContext(SimpleCParser.ExpressionStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(SimpleCParser.ReturnStatementContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(SimpleCParser.CompoundStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SimpleCParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(SimpleCParser.WhileStatementContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SimpleCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimpleCParser.LParen, SimpleCParser.Plus, SimpleCParser.Minus, SimpleCParser.Star, SimpleCParser.And, SimpleCParser.Identifier, SimpleCParser.Constant]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.expressionStatement()
                pass
            elif token in [SimpleCParser.Return]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.returnStatement()
                pass
            elif token in [SimpleCParser.LBrace]:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.compoundStatement()
                pass
            elif token in [SimpleCParser.If]:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.ifStatement()
                pass
            elif token in [SimpleCParser.While]:
                self.enterOuterAlt(localctx, 5)
                self.state = 82
                self.whileStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.expr = None # ExpressionContext

        def Semi(self):
            return self.getToken(SimpleCParser.Semi, 0)

        def expression(self):
            return self.getTypedRuleContext(SimpleCParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_expressionStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)




    def expressionStatement(self):

        localctx = SimpleCParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            localctx.expr = self.expression()
            self.state = 86
            self.match(SimpleCParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.expr = None # ExpressionContext

        def Return(self):
            return self.getToken(SimpleCParser.Return, 0)

        def Semi(self):
            return self.getToken(SimpleCParser.Semi, 0)

        def expression(self):
            return self.getTypedRuleContext(SimpleCParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_returnStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = SimpleCParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(SimpleCParser.Return)
            self.state = 89
            localctx.expr = self.expression()
            self.state = 90
            self.match(SimpleCParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompoundStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.stmts = None # StatementListContext

        def LBrace(self):
            return self.getToken(SimpleCParser.LBrace, 0)

        def RBrace(self):
            return self.getToken(SimpleCParser.RBrace, 0)

        def statementList(self):
            return self.getTypedRuleContext(SimpleCParser.StatementListContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_compoundStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundStatement" ):
                return visitor.visitCompoundStatement(self)
            else:
                return visitor.visitChildren(self)




    def compoundStatement(self):

        localctx = SimpleCParser.CompoundStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_compoundStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(SimpleCParser.LBrace)
            self.state = 93
            localctx.stmts = self.statementList()
            self.state = 94
            self.match(SimpleCParser.RBrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.expr = None # ExpressionContext
            self.then_stmt = None # StatementContext
            self.else_stmt = None # StatementContext

        def If(self):
            return self.getToken(SimpleCParser.If, 0)

        def LParen(self):
            return self.getToken(SimpleCParser.LParen, 0)

        def RParen(self):
            return self.getToken(SimpleCParser.RParen, 0)

        def expression(self):
            return self.getTypedRuleContext(SimpleCParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.StatementContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.StatementContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_ifStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = SimpleCParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(SimpleCParser.If)
            self.state = 97
            self.match(SimpleCParser.LParen)
            self.state = 98
            localctx.expr = self.expression()
            self.state = 99
            self.match(SimpleCParser.RParen)
            self.state = 100
            localctx.then_stmt = self.statement()
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 101
                self.match(SimpleCParser.T__0)
                self.state = 102
                localctx.else_stmt = self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.expr = None # ExpressionContext
            self.stmt = None # StatementContext

        def While(self):
            return self.getToken(SimpleCParser.While, 0)

        def LParen(self):
            return self.getToken(SimpleCParser.LParen, 0)

        def RParen(self):
            return self.getToken(SimpleCParser.RParen, 0)

        def expression(self):
            return self.getTypedRuleContext(SimpleCParser.ExpressionContext,0)


        def statement(self):
            return self.getTypedRuleContext(SimpleCParser.StatementContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_whileStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = SimpleCParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(SimpleCParser.While)
            self.state = 106
            self.match(SimpleCParser.LParen)
            self.state = 107
            localctx.expr = self.expression()
            self.state = 108
            self.match(SimpleCParser.RParen)
            self.state = 109
            localctx.stmt = self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpression(self):
            return self.getTypedRuleContext(SimpleCParser.AssignmentExpressionContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = SimpleCParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.assignmentExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimaryExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ident = None # Token
            self.constant = None # Token
            self.expr = None # ExpressionContext

        def Identifier(self):
            return self.getToken(SimpleCParser.Identifier, 0)

        def Constant(self):
            return self.getToken(SimpleCParser.Constant, 0)

        def LParen(self):
            return self.getToken(SimpleCParser.LParen, 0)

        def RParen(self):
            return self.getToken(SimpleCParser.RParen, 0)

        def expression(self):
            return self.getTypedRuleContext(SimpleCParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_primaryExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpression" ):
                return visitor.visitPrimaryExpression(self)
            else:
                return visitor.visitChildren(self)




    def primaryExpression(self):

        localctx = SimpleCParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_primaryExpression)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimpleCParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                localctx.ident = self.match(SimpleCParser.Identifier)
                pass
            elif token in [SimpleCParser.Constant]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                localctx.constant = self.match(SimpleCParser.Constant)
                pass
            elif token in [SimpleCParser.LParen]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.match(SimpleCParser.LParen)
                self.state = 116
                localctx.expr = self.expression()
                self.state = 117
                self.match(SimpleCParser.RParen)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PostfixExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(SimpleCParser.PrimaryExpressionContext,0)


        def callExpression(self):
            return self.getTypedRuleContext(SimpleCParser.CallExpressionContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_postfixExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfixExpression" ):
                return visitor.visitPostfixExpression(self)
            else:
                return visitor.visitChildren(self)




    def postfixExpression(self):

        localctx = SimpleCParser.PostfixExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_postfixExpression)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.primaryExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.callExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CallExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.args = None # ArgumentExpressionListContext

        def primaryExpression(self):
            return self.getTypedRuleContext(SimpleCParser.PrimaryExpressionContext,0)


        def LParen(self):
            return self.getToken(SimpleCParser.LParen, 0)

        def RParen(self):
            return self.getToken(SimpleCParser.RParen, 0)

        def argumentExpressionList(self):
            return self.getTypedRuleContext(SimpleCParser.ArgumentExpressionListContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_callExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallExpression" ):
                return visitor.visitCallExpression(self)
            else:
                return visitor.visitChildren(self)




    def callExpression(self):

        localctx = SimpleCParser.CallExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_callExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.primaryExpression()

            self.state = 126
            self.match(SimpleCParser.LParen)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleCParser.LParen) | (1 << SimpleCParser.Plus) | (1 << SimpleCParser.Minus) | (1 << SimpleCParser.Star) | (1 << SimpleCParser.And) | (1 << SimpleCParser.Identifier) | (1 << SimpleCParser.Constant))) != 0):
                self.state = 127
                localctx.args = self.argumentExpressionList()


            self.state = 130
            self.match(SimpleCParser.RParen)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentExpressionListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.AssignmentExpressionContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.AssignmentExpressionContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCParser.Comma)
            else:
                return self.getToken(SimpleCParser.Comma, i)

        def getRuleIndex(self):
            return SimpleCParser.RULE_argumentExpressionList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentExpressionList" ):
                return visitor.visitArgumentExpressionList(self)
            else:
                return visitor.visitChildren(self)




    def argumentExpressionList(self):

        localctx = SimpleCParser.ArgumentExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_argumentExpressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.assignmentExpression()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleCParser.Comma:
                self.state = 133
                self.match(SimpleCParser.Comma)
                self.state = 134
                self.assignmentExpression()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnaryExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def postfixExpression(self):
            return self.getTypedRuleContext(SimpleCParser.PostfixExpressionContext,0)


        def Plus(self):
            return self.getToken(SimpleCParser.Plus, 0)

        def Minus(self):
            return self.getToken(SimpleCParser.Minus, 0)

        def Star(self):
            return self.getToken(SimpleCParser.Star, 0)

        def And(self):
            return self.getToken(SimpleCParser.And, 0)

        def getRuleIndex(self):
            return SimpleCParser.RULE_unaryExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryExpression" ):
                return visitor.visitUnaryExpression(self)
            else:
                return visitor.visitChildren(self)




    def unaryExpression(self):
